# murmecha-cam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  CurveDir.cpp  CurveDir.hpp  Graph.cpp  Graph.hpp  RingBuffer.cpp  RingBuffer.hpp  camera.cpp  camera.hpp  hello_world_main.cpp  hungarian.cpp  hungarian.hpp  image_processing.cpp  image_processing.hpp  system.hpp  usb_stream.cpp  usb_stream.hpp  webserver.cpp  webserver.hpp  zhangsuen.cpp  zhangsuen.hpp
python_scripts/: receiver3.py
spiffs/: config.json
